[package]
name = "Soundcloud"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
reqwest = { version = "0.12.24", features = ["stream"] }
serde = { version = "1.0.228", features = ["derive"] }
regex = "1.12.2"
futures = "0.3.31"
bytes = "1.10.1"
serde_json = "1.0.145"
thiserror = "2.0.17"
url = "2.5.7"
async-stream = "0.3.6"