[package]
name = "soundcloud"
version = "0.1.0"
edition = "2024"

[lib]
name = "soundcloud"
path = "src/lib.rs"

[dependencies]
domain = { path = "../domain-lib" }

reqwest = { version = "0.13.3", features = ["stream"] }
serde = { version = "1.0.228", features = ["derive"] }
regex = "1.12.2"
futures = "0.3.31"
bytes = "1.10.1"
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1", features = ["full"] }
async-stream = "0.3.6"
aws-sdk-s3 = { version = "1.112.0" }
aws-config = "1.8.10"
http-body = "1.0.1"
tokio-stream = { version = "0.1", features = ["sync"] }
log = "0.4.28"
url = "2.5.7"
const_format = "0.2.35"
axum = "0.8.7"
